# aws-eks-network-policy-agent-simulator

./: .gitignore  NETWORK_POLICY_EXPLAINED.md  README.md  pyproject.toml  run.sh  setup.sh
ebpf/c/: ringbuf_consumer.c  simple_policy_test.c  tc.v4egress.bpf.c  tc.v4ingress.bpf.c
src/aws_eks_network_policy_agent_simulator/: __init__.py  __main__.py  bpf.py  bpfstats.py  cli.py  environment.py  network.py  network_multi.py  ringbuf.py  ringbuf_libbpf.py  stacks.py  status.py  tui.py
