[project]
name = "aws-eks-network-policy-agent-simulator"
version = "0.1.0"
description = "AWS EKS Network Policy Agent Simulator using eBPF"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyroute2>=0.9.5",
    "rich>=14.2.0",
    "textual>=7.0.0",
]

[project.scripts]
aws-eks-network-policy-agent-simulator = "aws_eks_network_policy_agent_simulator:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
